# crewai-rust

./: CLAUDE.md  CONTINUATION_PROMPT.md  Cargo.toml  Dockerfile  HANDOVER_PROMPT.md  INTEGRATION_STATUS.md  REALITY_CHECK.md  TECHNICAL_DEBT.md  build.rs  railway.toml
.deprecated/pr27_review_doc/: README.md
.github/workflows/: ci-master.yml  rust.yml
capabilities/mcp/: bridge.yaml
capabilities/minecraft/: server_control.yaml
capabilities/o365/: calendar.yaml  mail.yaml
capabilities/rest_api/: generic.yaml
docs/: AGENT_MUL_CONTRACTS.md  AGENT_ORCHESTRATION_SPEC.md  INTEGRATION_EXECUTION_PLAN.md  index.md  installation.md  proxy-contract.md  quickstart.md
docs/concepts/: agents.md  crews.md  events.md  flows.md  knowledge.md  llms.md  mcp.md  memory.md  tasks.md  tools.md
docs/guides/: agent-card-spec.md  custom-tools.md
docs/migration/: python-to-rust.md
docs/tools/: overview.md
modules/: chess_advocatus_diaboli.yaml  chess_critic.yaml  chess_endgame.yaml  chess_psychologist.yaml  chess_strategist.yaml  chess_tactician.yaml  coding_agent.yaml  exchange_migration.yaml  inner_dialogue_balanced.yaml  inner_dialogue_catalyst.yaml  inner_dialogue_guardian.yaml  minecraft_orchestrator.yaml  o365_admin.yaml  persona_analytical.yaml  persona_embodied.yaml  persona_sovereign.yaml  soc_incident_response.yaml
src/: context.rs  crew.rs  lib.rs  lite_agent.rs  process.rs  task.rs  xai_grpc.rs
src/a2a/: client.rs  config.rs  errors.rs  mod.rs  types.rs  wrapper.rs
src/a2a/auth/: mod.rs
src/a2a/extensions/: mod.rs
src/a2a/updates/: mod.rs
src/a2a/utils/: mod.rs
src/agent/: core.rs  mod.rs  utils.rs
src/agent/internal/: meta.rs  mod.rs
src/agents/: base_agent.rs  crew_agent_executor.rs  mod.rs  parser.rs  tools_handler.rs
src/agents/agent_adapters/: base_agent_adapter.rs  base_converter_adapter.rs  base_tool_adapter.rs  mod.rs
src/agents/agent_builder/: base_agent_executor.rs  base_agent_trait.rs  mod.rs
src/agents/cache/: cache_handler.rs  mod.rs
src/blackboard/: a2a.rs  bind_bridge.rs  mod.rs  phase.rs  slot.rs  typed_slot.rs  view.rs
src/capabilities/: capability.rs  mod.rs  registry.rs
src/chat/: awareness_session.rs  felt_parse.rs  fingerprint_cache.rs  handler.rs  mod.rs  semantic_kernel.rs
src/cli/: mod.rs
src/contract/: bridge.rs  envelope.rs  event_recorder.rs  mod.rs  pg_store.rs  pipeline.rs  router.rs  subsystem.rs  types.rs  wire_bridge.rs
src/core/: mod.rs
src/core/providers/: content_processor.rs  crew_provider.rs  hitl_provider.rs  human_input.rs  mod.rs
src/crews/: crew_output.rs  mod.rs  utils.rs
src/drivers/: barrier_stack.rs  markov_barrier.rs  mod.rs  nars.rs  spo.rs
src/events/: base_event.rs  base_event_listener.rs  crewai_event_bus.rs  event_bus.rs  event_context.rs  event_listener.rs  handler_graph.rs  mod.rs
src/events/types/: a2a_events.rs  agent_events.rs  crew_events.rs  flow_events.rs  knowledge_events.rs  llm_events.rs  llm_guardrail_events.rs  logging_events.rs  mcp_events.rs  memory_events.rs  mod.rs  reasoning_events.rs  system_events.rs  task_events.rs  tool_events.rs  tool_usage_events.rs
src/experimental/: agent_executor.rs  mod.rs
src/experimental/evaluation/: mod.rs
src/flow/: flow.rs  flow_config.rs  flow_events.rs  flow_trackable.rs  flow_wrappers.rs  human_feedback.rs  mod.rs  utils.rs
src/flow/async_feedback/: mod.rs
src/flow/persistence/: mod.rs
src/flow/visualization/: mod.rs
src/hooks/: lifecycle.rs  mod.rs
src/interfaces/: adapter.rs  gateway.rs  mod.rs
src/interfaces/adapters/: graph_api.rs  mcp_bridge.rs  mod.rs  rcon.rs  rest_api.rs
src/knowledge/: knowledge.rs  knowledge_config.rs  mod.rs
src/knowledge/source/: mod.rs
src/knowledge/storage/: mod.rs
src/llm/: mod.rs
src/llms/: base_llm.rs  mod.rs  streaming.rs
src/llms/hooks/: mod.rs
src/llms/providers/: mod.rs
src/mcp/: client.rs  config.rs  filters.rs  mod.rs
src/mcp/transports/: http.rs  mod.rs  sse.rs  stdio.rs
src/memory/: memory.rs  mod.rs
src/memory/contextual/: mod.rs
src/memory/entity/: mod.rs
src/memory/long_term/: mod.rs
src/memory/short_term/: mod.rs
src/memory/storage/: interface.rs  kickoff_task_outputs_storage.rs  ltm_sqlite_storage.rs  mem0_storage.rs  mod.rs  rag_storage.rs
src/meta_agents/: card_builder.rs  delegation.rs  dto_meta.rs  mod.rs  orchestrator.rs  savant_meta.rs  savants.rs  skill_engine.rs  spawner.rs  types.rs
src/modules/: error.rs  loader.rs  mod.rs  module_def.rs  openapi_parser.rs  runtime.rs
src/persona/: agit.rs  composite.rs  inner_loop.rs  jit_link.rs  llm_modulation.rs  mod.rs  profile.rs  qualia_prompt.rs  thinking_style.rs  triune.rs  triune_dispatch.rs
src/policy/: mod.rs  rbac.rs
src/project/: mod.rs
src/rag/: factory.rs  mod.rs  types.rs
src/rag/chromadb/: mod.rs
src/rag/config/: mod.rs
src/rag/core/: mod.rs
src/rag/embeddings/: mod.rs
src/rag/qdrant/: mod.rs
src/rag/storage/: mod.rs
src/security/: constants.rs  fingerprint.rs  mod.rs  security_config.rs
src/server/: a2a_routes.rs  barrier_routes.rs  mod.rs  routes.rs
src/tasks/: conditional_task.rs  hallucination_guardrail.rs  llm_guardrail.rs  mod.rs  output_format.rs  task_output.rs
src/telemetry/: mod.rs
src/tools/: base_tool.rs  cache_tools.rs  mcp_native_tool.rs  mcp_tool_wrapper.rs  mod.rs  structured_tool.rs  tool_calling.rs  tool_types.rs  tool_usage.rs
src/tools/agent_tools/: add_image_tool.rs  agent_tools.rs  ask_question_tool.rs  delegate_work_tool.rs  mod.rs  read_file_tool.rs
src/tools/chess/: mod.rs  tools.rs
src/translations/: mod.rs
src/types/: crew_chat.rs  hitl.rs  mod.rs  streaming.rs  usage_metrics.rs  utils.rs
src/utilities/: config.rs  converter.rs  errors.rs  file_handler.rs  formatter.rs  guardrail_types.rs  i18n.rs  logger.rs  mod.rs  paths.rs  printer.rs  prompts.rs  pydantic_schema_utils.rs  rpm_controller.rs  string_utils.rs  task_output_storage_handler.rs  token_counter_callback.rs  training_handler.rs  types.rs
src/utilities/crew/: mod.rs
src/utilities/evaluators/: mod.rs
tests/: a2a_claude_grok_loop.rs
(+34 files in other folders)
