[package]
name = "crewai"
version = "1.9.3"
edition = "2021"
description = "A 1:1 Rust port of the crewAI Python framework for AI agent orchestration"
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# UUID
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto (MD5 hashing, HMAC-SHA256 for AWS SigV4)
md-5 = "0.10"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# PostgreSQL (feature-gated)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json"], optional = true }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# Regex
regex = "1"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Template rendering
tera = "1"

# Zero-copy byte buffers
bytes = "1"

# Thread-safe collections
dashmap = "6"
parking_lot = "0.12"

# OpenTelemetry
opentelemetry = "0.27"
opentelemetry_sdk = "0.27"

# Signal handling
ctrlc = "3"

# Lazy statics
once_cell = "1"
lazy_static = "1"

# Base64 encoding
base64 = "0.22"

# YAML parsing (for capability definitions and agent cards)
serde_yaml = "0.9"

# Shared substrate types (LadybugDB contract) — optional for standalone mode
ladybug-contract = { path = "../ladybug-rs/crates/ladybug-contract", optional = true }

# Chess stack: deactivated — see `chess-savant` branch for full chess agent
# stonksfish = { path = "../stonksfish", optional = true }
# ladybug = { path = "../ladybug-rs", optional = true }
# chess = { version = "3.2.0", optional = true }
# neo4j-rs = { path = "../neo4j-rs", optional = true }

[features]
default = []
postgres = ["sqlx"]
ladybug = ["dep:ladybug-contract"]
wire_protocol = []  # Enable when ladybug-contract gains the wire module
# chess = ["dep:stonksfish", "dep:ladybug", "dep:chess", "dep:neo4j-rs"]  # see chess-savant branch

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
