[package]
name = "crewai"
version = "1.9.3"
edition = "2021"
rust-version = "1.93"
description = "A 1:1 Rust port of the crewAI Python framework for AI agent orchestration"
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# UUID
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto (MD5 hashing, HMAC-SHA256 for AWS SigV4)
md-5 = "0.10"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# PostgreSQL (feature-gated)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json"], optional = true }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# Regex
regex = "1"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Template rendering
tera = "1"

# Zero-copy byte buffers
bytes = "1"

# Thread-safe collections
dashmap = "6"
parking_lot = "0.12"

# OpenTelemetry
opentelemetry = "0.27"
opentelemetry_sdk = "0.27"

# Signal handling
ctrlc = "3"

# Lazy statics
once_cell = "1"
lazy_static = "1"

# Base64 encoding
base64 = "0.22"

# YAML parsing (for capability definitions and agent cards)
serde_yaml = "0.9"

# Shared substrate types (LadybugDB contract) — optional for standalone mode
ladybug-contract = { path = "../ladybug-rs/crates/ladybug-contract", optional = true }

# gRPC client — xAI gRPC API (feature-gated)
tonic = { version = "0.14", features = ["channel", "transport", "tls-ring", "tls-webpki-roots"], optional = true }
tonic-prost = { version = "0.14", optional = true }
prost = { version = "0.14", optional = true }
prost-types = { version = "0.14", optional = true }

# Chess stack: deactivated — see `chess-savant` branch for full chess agent
# stonksfish = { path = "../stonksfish", optional = true }
# ladybug = { path = "../ladybug-rs", optional = true }
# chess = { version = "3.2.0", optional = true }
# neo4j-rs = { path = "../neo4j-rs", optional = true }

# Vendor: ladybug-rs (awareness substrate) — activated by Docker sed
# ladybug-vendor = { package = "ladybug", path = "vendor/ladybug-rs", features = ["simd", "parallel"], optional = true }
# Vendor: n8n-rs (workflow orchestration) — activated by Docker sed
# n8n-core = { path = "vendor/n8n-rs/n8n-rust/crates/n8n-core", optional = true }
# n8n-workflow = { path = "vendor/n8n-rs/n8n-rust/crates/n8n-workflow", optional = true }
# n8n-hamming = { path = "vendor/n8n-rs/n8n-rust/crates/n8n-hamming", optional = true }
# Vendor: rustynum (SIMD numerical library) — activated by Docker sed
# rustynum-rs = { path = "vendor/rustynum/rustynum-rs", optional = true }

[build-dependencies]
tonic-build = { version = "0.14", optional = true }
tonic-prost-build = { version = "0.14", optional = true }

[features]
default = []
postgres = ["sqlx"]
ladybug = ["dep:ladybug-contract"]
wire_protocol = []  # Enable when ladybug-contract gains the wire module
xai-grpc = ["dep:tonic", "dep:tonic-prost", "dep:prost", "dep:prost-types", "dep:tonic-build", "dep:tonic-prost-build"]
# chess = ["dep:stonksfish", "dep:ladybug", "dep:chess", "dep:neo4j-rs"]  # see chess-savant branch
# Vendor feature flags — activated by Docker sed
# vendor-ladybug = ["dep:ladybug-vendor", "ladybug"]
# vendor-n8n = ["dep:n8n-core", "dep:n8n-workflow", "dep:n8n-hamming"]
# vendor-rustynum = ["dep:rustynum-rs"]
# full = ["vendor-ladybug", "vendor-n8n", "vendor-rustynum", "xai-grpc"]

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
